# lineSkip

./: README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env-example  .gitignore  CLAUDE.md  Cargo.toml  README.md  dockerfile  seed.sql
backend/.claude/: settings.local.json
backend/.next/: trace  trace-build
backend/lineskip-api-collection/: bruno.json  hello.bru  register user.bru
backend/migrations/: 20240822130128_createUsersTable.up.sql  20241004025614_updateUsersTable.down.sql  20241004025614_updateUsersTable.up.sql  20241004025615_createTicketsTable.down.sql  20241004025615_createTicketsTable.up.sql  20241004025616_createOrdersTable.up.sql  20260524031131_rename_password_to_password_hash.down.sql  20260524100002_add_event_id_to_orders.down.sql  20260524100002_add_event_id_to_orders.up.sql  20260524100003_create_order_status_enum.down.sql  20260524100003_create_order_status_enum.up.sql  20260524110001_create_users_table.up.sql  20260524110002_create_events_table.up.sql  20260524110003_create_tickets_table.up.sql  20260524110004_create_orders_table.up.sql
backend/src/: errors.rs  lib.rs  main.rs  state.rs
backend/src/db/: connection.rs
backend/src/dto/: auth.rs  event.rs  mod.rs  order.rs  payment.rs  ticket.rs
backend/src/handlers/: auth.rs  events.rs  mod.rs  orders.rs  payment.rs  tickets.rs
backend/src/models/: event.rs  mod.rs  order.rs  order_status.rs  ticket.rs  user.rs
backend/src/routes/: api.rs
backend/src/services/: auth_service.rs  cache_service.rs  jwt_service.rs  mod.rs  payment_service.rs  qr_service.rs  ticket_service.rs
backend/src/utils/: hash.rs  mod.rs  response.rs
backend/tests/: api.rs
frontend/: README.md  dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthForm.tsx  (+7 more)
(+15 files in other folders)
