[package]
name = "lineskip-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
serde = {version = "1.0.209" ,features = ["derive"]}
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["postgres", "runtime-tokio-rustls", "chrono", "runtime-async-std-native-tls", "uuid"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

rand = "0.8.5"
rust-argon2 = "2.1.0"
hyper = {version = "1.4.1" ,features = ["full"]}

[dev-dependencies]
cargo-watch = "8.5.2"
