[package]
name = "lineskip-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
serde = {version = "1.0.210" ,features = ["derive"]}
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

rand = "0.8.5"
rust-argon2 = "2.1.0"
thiserror = "1.0.64"

# QR Code generation
qrcode = "0.13.0"
image = "0.24.7"
base64 = "0.22.1"

# Redis for caching
redis = { version = "0.25.4", features = ["tokio-comp"] }

# JWT authentication
jsonwebtoken = "9.3.0"

# Payment processing (mock/stripe-like)
fake = { version = "2.9.2", features = ["derive"] }

# Logging
log = "0.4.22"
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
cargo-watch = "8.5.3"
